--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -104,7 +104,7 @@
       transform: translateX(-50%);
       height: 8px;
       width: 79%;
-      background: linear-gradient(to right, #17c3b2 33.3%, #fe6d73 33.3%);
+      background: linear-gradient(to right ,#ccc 5%, #17c3b2 5%,#17c3b2 59%, #fe6d73 33.3%);
       border-radius: 999px;
       z-index: 2;
     }
@@ -126,10 +126,10 @@
       top: -1.2VW; /* zarovnáno s .timeline-container::after */
       left: 50%;
       transform: translate(-50%, -50%); /* středové zarovnání kolečka */
-      width: 16px;
-      height: 16px;
+      width: 18px;
+      height: 18px;
       background-color: white;
-      border: 4px solid #ccc;
+      border: 5px solid #ccc;
       border-radius: 50%;
       z-index: 4;
     }
@@ -195,11 +195,11 @@
       .timeline-month::before {
       content: '';
       position: absolute;
-      top: -1.5VW; /* zarovnáno s .timeline-container::after */
+      top: -1.6VW; /* zarovnáno s .timeline-container::after */
       left: 50%;
       transform: translate(-50%, -50%); /* středové zarovnání kolečka */
-      width: 10px;
-      height: 10px;
+      width: 12px;
+      height: 12px;
       background-color: white;
       border: 4px solid #ccc;
       border-radius: 50%;
@@ -213,7 +213,7 @@
       transform: translateX(-50%);
       height: 8px;
       width: 85%;
-      background: linear-gradient(to right, #17c3b2 33.3%, #fe6d73 33.3%);
+      background: linear-gradient(to right ,#ccc 6%, #17c3b2 5%,#17c3b2 59%, #fe6d73 33.3%);
       border-radius: 999px;
       z-index: 2;
     }
