kompletní texty + pridaný video jsu se zahrabat

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -303,8 +303,8 @@
             <p>Šprtárna: 10. 1. – 1. 2.
             <br>Masakr: 1. 2. – 15. 3.</p>
             <p><strong>Kdy se koná?</strong></p>
-            <p>Čeština, čtvrtky  17:00–18:30
-            <br>Matematika, čtvrtky 17:00–18:30</p>
+            <p>ČJ, Čtvrtky  17:00–18:30
+            <br>M, Úterky 17:00–18:30</p>
           </div>
         </div>
       </div>
@@ -339,14 +339,18 @@
     <div class="description-block">
       <h3 style="color: #17c3b2;">Šprtárna</h3>
       <p>
-        V teto části se budeme zaobírat společným vyplňováním a nasledným opravováním testů. Studenti budou testy vyplňovat po cvičeních, které si se svým lektorem ve skupinkách následně zkontrolují a v případě chyby jim lektor látku vysvětlí. Takto studenti projdou společně celým testem,
-        což by jim po ukončení této části mělo dát dostatečné znalosti obecné látky potřebné k úspěšnému přijetí na jejich vysněnou střední školu.
+        Ve Šprtárně nám především jde o naučení se veškeré latky a fundementální pochopení testů.<br> 
+        Celá vyuka probíhá v menších skupinkách do kterých žaky rozdělíme na zakladě rozřzovacích testu.
+        Studenti budou vyplňovat testy po cvičeních, které si se svým lektorem následně zkontrolují,
+        v případě chyby jim lektor látku vysvětlí.
       </p>
     </div>
     <div class="description-block">
       <h3 style="color: #fe6d73;">Masakr</h3>
-      <p>V této části si studenti na začátku vyberou, v jakých oblastech daných předmětů by se chtěli zlepšovat, a podle toho budou následně rozřazeni do skupin.
-        Následně budou psát testy na “ostro” stejně jako u reálných přijímaček. V poslední části lekce si pak testy ve
+      <p>
+        V Masakru se zaměřujeme hlavně na získání jistoty při testech a time managment. <br>
+        V kurzu si každý vždy individuálně napíše test a pak si ho ve skupinkách opraví a vysvětlí chyby s lektorem.
+        Součástí jsou i domací úlohy specíalní vyučovací hodiny ve kterých se soustředíme na problematickou látku jako 16. ulohy v matematice  
       </p>
     </div>
   </div>
