--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -150,30 +150,42 @@
             <img class="logo-homepage" src="{{ url_for('static', filename='img/big_logo.png') }}" alt="big_logo" class="hero-logo">
             <h2>Studenti studentum</h2>
             <p>Doučování na přijímačky 9. ročníků. 2025-26.
-            <br>gymnázium Jana Keplera</p>
+            <br>Studenti gymnázium Jana Keplera</p>
             <div class="hero-buttons">
                 <a href="#o-projektu" class="btn" style="background-color: #00a8e8;">Kdo jsme</a>
                 <a href="{{ url_for('main.about') }}" class="btn" style="background-color: #ff6392;">O průběhu doučování</a>
             </div>
         </div>
         <div class="hero-video">
-            <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="Inception Trailer" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/5hiULjkAj-4" title="STUDNA (doučování)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
 
     <section class="project-info" id="o-projektu">
         <h4>Kdo jsme</h4>
         <p>
-            Jsme studenti Gymnázia Jana Keplera, kteří Cermaty už úspěšně napsali.
-            Právě při přípravě na Cermaty jsme zjistili, že větší doučka mají většinou problém studenty něco reálně naučit,
-            a studenti se proto většinou musí doučovat doma či musí dohledávat jiná doučování. 
-            Nakonec jsme se proto rozhodli, že si založíme vlastní školní doučování, které studenty na cermat testy řádně připraví.
+            Jsme skupina studentů Gymnázia Jana Keplera, kteří úspěšně prošli přijímacími zkouškami.
+            Vlastní zkušenost nás naučila, že většina komerčních doučování je neefektivní a finančně náročná a
+            studenti se pak často musí učit doma s rodiči.
+            <br>Založili jsme proto Studnu – doučování, které je dostupné, 
+            vedené zkušenými studenty a skutečně připravuje na to, co u přijímaček rozhoduje.
         </p>
-        <h4>Jak funguje doučko</h4>
+        <h4>Jak Doučujeme</h4>
         <p>
             Doučování je rozděleno na dvě části: na Šprtárnu a Masakr.
             Šprtárná spočívá v obecném doučování látky ve skupinkách, které rozřadíme podle počtu bodů v prvním rozřazovacím testu. V části Masakr se zaměřujeme primárně na psaní testů a doučování specifických problémů dané látky,
             tato část bude probíhat opět ve skupinkách.
+        </p>
+        <h4>Lektoři</h4>
+        <p>
+            Propojujeme studenty se studenty – u nás doučují žáci Gymnázia Jana Keplera,
+            kteří už přijímačky zvládli s minimálně 45 body a vědí, co je čeká.
+            Všichni máme učení na přijímačky ještě čerstvě v hlavě –
+            víme, jak se systematicky učit i na co si dát pozor v testech.
+
+
+
+            Učení na přijímačky máme všichni v živé paměti víme jak se systematicky učit.
         </p>
     </section>
     <footer>
