--- a/app/templates/kontakt.html
+++ b/app/templates/kontakt.html
@@ -185,7 +185,6 @@
         <div class="kontakt-item">
           <strong>📧 Email</strong>
           <p> <a href="mailto:vystavovatele@example.com">douc.studna@gmail.com 
-          <br><a href="mailto:media@example.com">media@example.com</a></p>
         </div>
         <div class="kontakt-item">
           <strong>📞 Telefon:</strong>
@@ -225,7 +224,7 @@
 
   <div class="tym-wrapper">
     <section class="tym-section">
-      <h2>Organizační tým</h2>
+      <h2>Organizátoři</h2>
       <div class="tym-grid">
         {% for i in range(1, 7) %}
         <div class="tym-clen">
