--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -173,18 +173,16 @@
 
   <section class="payment-section">
     <h1>Kurzy:</h1>
-    <div class="course-offerings">¨
+    <div class="course-offerings">
       <!-- KARTA: KOMPLET-->
       <div class="course-card">
         <h3>Komplet</h3>
         <div class="space" style="color: #1d3557; "><p><strong>14 volných míst</strong></p></div>
         <p><strong>Období:</strong> 4. Listopad – 16. Duben</p>
-        <p><strong>Obsah:</strong><br> 
-        Zde se zaměříme na dopilování menších nedostatků studentů v potřebné látce a zároveň na psaní testů stejně, jako u cermatu.
-        </p>
-        <p>
-          <strong>Rozsah:</strong> 42 lekcí (63h)<br>
-        </p>
+        <p><strong>Rozsah:</strong> 42 lekcí (63h)<br></p>
+        <p><strong>Popis:</strong><br> Komplet je spojení Šprtárny a Masakru,<br> Je to kompletní příprava. Žákum pravidelně posíláme domácí úkoly, dukladně jim vysvětlíme veškerou látku, a naučíme je správný postup při vyplňování testů<br> </p>
+        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–18:30 <br> Matematika, Čtvrtky 17:00–18:30</p>
+        
         <div class="price">Cena: 8 000 Kč</div>
 
         <div class="payment-options">
@@ -257,10 +255,9 @@
         <h3 style="color: #17c3b2;">Šprtárna</h3>
         <div class="space" style="color: #17c3b2; "><p><strong>14 volných míst</strong></p></div>
         <p><strong>Období:</strong> 4. Listopadu – 29. Ledna</p>
-        <p><strong>Obsah:</strong><br>
-        V tomto kurzu se primárně zaměříme na skupinové vyplňování a opravování testů ve skupinkách, abychom žákům pomohli získat základy potřebné k tomu, aby se dostali na jejich vysněnou střední školu.
-        </p>
         <p><strong>Rozsah:</strong> 22 lekcí (33h)</p>
+        <p><strong>Popis:</strong><br>Ve Šprtárně, jde hlavně o naučení se veškeré látky a seznámení se s testy. Žaci jsou rozdeleni do malých skupinek (3-5 lidi).<br> S doučovatelem vyplňují cvičné testy, jakmile se narazí na chybu tak se látka skupinově vysvětlí. </p>
+        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–18:30 <br> Matematika, Čtvrtky 17:00–18:30</p>
         <div class="price">Cena: 4 000 Kč</div>
 
         <div class="payment-options">
@@ -332,10 +329,9 @@
         <h3 style="color: #fe6d73;">Masakr</h3>
         <div class="space" style="color: #fe6d73; "><p><strong>14 volných míst</strong></p></div>
         <p><strong>Období:</strong> 3. Únor – 16. Dubna</p>
-        <p><strong>Obsah:</strong><br> 
-        Zde se zaměříme na dopilování menších nedostatků studentů v potřebné látce a zároveň na psaní testů stejně, jako u cermatu.
-        </p>
         <p><strong>Rozsah:</strong> 20 lekcí (30h)</p>
+        <p><strong>Popis:</strong><br> Masakr je grind.<br> Cílem je získat v testech jistotu <br>a tak je píšem pořád dokola. <br>Každý týden žaci si napíšou kompletní cermat test, který si nasledně s lektorem v malých skupinkách opraví a vysvětlí. </p>
+        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–18:30 <br> Matematika, Čtvrtky 17:00–18:30</p>
         <div class="price">Cena: 4 000 Kč</div>
 
         <div class="payment-options">
