logo + finalní upravy

--- a/app/templates/kontakt.html
+++ b/app/templates/kontakt.html
@@ -6,8 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Studna-doucování na přijímačky</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-  <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='img/favicon.jpg') }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-/O1M8qv2j4FdnD2eRX1gQFNYQw+ZqUq2U3mFAkpKXsULr4b9Z5Uv+1r0c8yS9HPX8on0wTqRzEO0rYeCcuL0Xg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-96x96.png') }}" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/favicon.svg') }}" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/apple-touch-icon.png') }}" />
+  <link rel="manifest" href="{{ url_for('static', filename='img/site.webmanifest') }}" />
   <style>
     .kontakt-wrapper {
       background-color: #eef0f2; 
