--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Studna-doucování na přijímačky</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-  <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='img/favicon.jpg') }}">
+
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-96x96.png') }}" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/favicon.svg') }}" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/apple-touch-icon.png') }}" />
+  <link rel="manifest" href="{{ url_for('static', filename='img/site.webmanifest') }}" />
   <style>
     .payment-section {
       background-color:#f5faff; 
@@ -210,7 +215,7 @@
             <label for="cislo_uctu">Vaše číslo učtu:</label>
             <input type="number" id="cislo_uctu" name="cislo_uctu" required>    
             
-            <label for="misto_bydliste">Místo bydliště:</label>
+            <label for="misto_bydliste">Celé místo bydliště:</label>
             <input type="text" id="misto_bydliste" name="misto_bydliste" required>
 
             <label for="psc">PSČ:</label>
@@ -239,7 +244,7 @@
             <label for="cislo_uctu">Vaše číslo učtu:</label>
             <input type="number" id="cislo_uctu" name="cislo_uctu" required>
 
-            <label for="misto_bydliste">Místo bydliště:</label>
+            <label for="misto_bydliste">Celé místo bydliště:</label>
             <input type="text" id="misto_bydliste" name="misto_bydliste" required>
 
             <label for="psc">PSČ:</label>
@@ -285,7 +290,7 @@
             <label for="cislo_uctu">Vaše číslo učtu:</label>
             <input type="number" id="cislo_uctu" name="cislo_uctu" required>
 
-            <label for="misto_bydliste">Místo bydliště:</label>
+            <label for="misto_bydliste">Celé místo bydliště:</label>
             <input type="text" id="misto_bydliste" name="misto_bydliste" required>
 
             <label for="psc">PSČ:</label>
@@ -313,7 +318,7 @@
             <label for="cislo_uctu">Vaše číslo učtu:</label>
             <input type="number" id="cislo_uctu" name="cislo_uctu" required>
             
-            <label for="misto_bydliste">Místo bydliště:</label>
+            <label for="misto_bydliste">Celé místo bydliště:</label>
             <input type="text" id="misto_bydliste" name="misto_bydliste" required>
 
             <label for="psc">PSČ:</label>
@@ -359,7 +364,7 @@
             <label for="cislo_uctu">Vaše číslo učtu:</label>
             <input type="number" id="cislo_uctu" name="cislo_uctu" required>
             
-            <label for="misto_bydliste">Místo bydliště:</label>
+            <label for="misto_bydliste">Celé místo bydliště:</label>
             <input type="text" id="misto_bydliste" name="misto_bydliste" required>
 
             <label for="psc">PSČ:</label>
@@ -387,7 +392,7 @@
             <label for="cislo_uctu">Vaše číslo učtu:</label>
             <input type="number" id="cislo_uctu" name="cislo_uctu" required>
             
-            <label for="misto_bydliste">Místo bydliště:</label>
+            <label for="misto_bydliste">Celé Místo bydliště:</label>
             <input type="text" id="misto_bydliste" name="misto_bydliste" required>
 
             <label for="psc">PSČ:</label>
