--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,11 +6,24 @@
   <title>Studna-doucování na přijímačky</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-96x96.png') }}" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/favicon.svg') }}" />
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/apple-touch-icon.png') }}" />
-    <link rel="manifest" href="{{ url_for('static', filename='img/site.webmanifest') }}" />
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-96x96.png') }}" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/favicon.svg') }}" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/apple-touch-icon.png') }}" />
+  <link rel="manifest" href="{{ url_for('static', filename='img/site.webmanifest') }}" />
+
+  <meta property="og:title" content="Studna – Doučování na přijímačky | Studenti studentům" />
+  <meta property="og:description" content="Kvalitní doučování matematiky a angličtiny pro úspěch u přijímaček na SŠ/VŠ a maturity. Individuální online i prezenční výuka." />
+  <meta property="og:image" content="{{ url_for('static', filename='img/big_logo.png', _external=True) }}" />
+  <meta property="og:url" content="{{ request.url }}" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Studna Doučování" />
+  <meta property="og:locale" content="cs_CZ" /> 
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Studna – Doučování na přijímačky | Studenti studentům" />
+  <meta name="twitter:description" content="Kvalitní doučování matematiky a angličtiny pro úspěch u přijímaček na SŠ/VŠ a maturity. Individuální online i prezenční výuka." />
+  <meta name="twitter:image" content="{{ url_for('static', filename='img/big.logo.png', _external=True) }}" />
 </head>
   <style>
     
