obrazek i pro prohlížeče pokus 2

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="{{ url_for('static', filename='img/site.webmanifest') }}" />
 
     <meta property="og:title" content="Studna – Doučování na přijímačky | Studenti studentům" />
-    <meta property="og:description" content="Kvalitní doučování matematiky a angličtiny pro úspěch u přijímaček na SŠ/VŠ a maturity. Individuální online i prezenční výuka." />
+    <meta property="og:description" content="Kvalitní doučování matematiky a češtiny pro úspěch u přijímaček na SŠ." />
     <meta property="og:image" content="{{ url_for('static', filename='img/big_logo.png', _external=True) }}" />
     <meta property="og:url" content="{{ request.url }}" />
     <meta property="og:type" content="website" />
@@ -22,7 +22,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Studna – Doučování na přijímačky | Studenti studentům" />
-    <meta name="twitter:description" content="Kvalitní doučování matematiky a angličtiny pro úspěch u přijímaček na SŠ/VŠ a maturity. Individuální online i prezenční výuka." />
+    <meta name="twitter:description" content="Kvalitní doučování matematiky a češtiny pro úspěch u přijímaček na SŠ." />
     <meta name="twitter:image" content="{{ url_for('static', filename='img/big.logo.png', _external=True) }}" />
 
 
